# solid_verifier

./: .env.example  .gitignore  .importlinter  07_04_import_graph_refactor_plan.md  ARCHITECTURE.md  README.md  README.ru.md  SOLID_audit.md  pyproject.toml  pytest.ini  requirements.txt  run_solid_dashboard.py  solid_config.json
.tmp_heuristics_tests/: tmp_module.py
prompts/: response_schema.json  system.md  user_base.md  user_lsp_section.md  user_ocp_section.md
solid_dashboard/: __main__.py  config.py  defaults.py  pipeline.py  report_aggregator.py  schema.py
solid_dashboard/adapters/: __init__.py  class_classifier.py  cohesion_adapter.py  heuristics_adapter.py  import_graph_adapter.py  import_linter_adapter.py  pyan3_adapter.py  radon_adapter.py
solid_dashboard/interfaces/: analyzer.py
solid_dashboard/llm/: __init__.py  ast_parser.py  budget.py  cache.py  class_role.py  errors.py  factory.py  gateway.py  heuristics.py  interfaces.py  llm_adapter.py  provider.py  types.py
solid_dashboard/llm/heuristics/: __init__.py  _runner.py  _shared.py  lsp_h_001.py  lsp_h_002.py  lsp_h_003.py  lsp_h_004.py  ocp_h_001.py  ocp_h_002.py  ocp_h_004.py
solid_dashboard/llm/llm_client/: cache.py  llm_adapter.py  provider.py
solid_dashboard/report/: export_skeleton.py  project_tree.txt  run_export_skeleton.py  scopus_project_mask.txt  solid_project_tree.py
solid_dashboard/report/project_mask/: export_skeleton.py
solid_dashboard/report/project_tree/: solid_project_tree.py
tests/: test_report_aggregator.py
tests/llm/: conftest.py  mock_provider.py  test_analyze_mock_gateway.py  test_ast_parser.py  test_gateway.py  test_heuristics.py  test_heuristics_integration.py  test_open_router_manual.py  test_parse_llm_response.py  test_provider.py  test_types.py
tests/llm/test_heuristics/: conftest.py  test_deduplication.py  test_heuristics_integration.py  test_heuristics_shared.py  test_lsp_h_001.py  test_lsp_h_002.py  test_lsp_h_003.py  test_lsp_h_004.py  test_ocp_h_001.py  test_ocp_h_002.py  test_ocp_h_004.py  test_orchestration.py
tests/static_adapters/test_cohesion_adapter/: conftest.py  test_classify_class.py  test_cohesion_adapter_edge_cases.py  test_is_empty_method.py  test_method_usage_visitor.py  test_resolve_classdef.py
tests/static_adapters/test_import_graph_adapter/: test_import_graph_adapter.py
tests/static_adapters/test_import_linter_adapter/: test_import_linter_adapter.py
tests/static_adapters/test_pyan3_adapter/: conftest.py  helpers.py  test_confidence.py  test_deduplication.py  test_detect_suspicious_blocks.py  test_error_paths.py  test_node_classification.py  test_parser.py
tests/static_adapters/test_radon_adapter/: conftest.py  helpers.py  test_edge_cases_extra.py  test_error_paths.py  test_ignore_dirs.py  test_lizard_enrichment.py  test_mi.py
tests/test_cohesion_adapter/: conftest.py  helpers.py  test_ancestor_enrichment_and_lcom4.py  test_classify_class.py  test_cohesion_adapter_edge_cases.py  test_method_usage_visitor.py  test_run_integration.py
